Demo/src/objects/OrderDetail__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order_No</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>OrderDetails</relationshipLabel>
        <relationshipName>OrderDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>ProductCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product_Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>OrderDetails</relationshipLabel>
        <relationshipName>OrderDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubTotal__c</fullName>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>OrderDetail</label>
    <nameField>
        <label>OrderDetail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrderDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>